src/snapshots/md_lsp__ast__tests__find_definition_for_identifier-2.snap
---
source: src/ast.rs
expression: found_definition_2
---
Some(
    Definition {
        position: Some(
            153:1-153:37 (2738-2774),
        ),
        url: "https://duckduckgo.com",
        title: None,
        identifier: "duckduckgo",
        label: Some(
            "duckduckgo",
        ),
    },
)
