src/snapshots/md_lsp__ast__tests__find_definition_for_identifier.snap
---
source: src/ast.rs
expression: found_definition_1
---
Some(
    Definition {
        position: Some(
            155:1-155:34 (2776-2809),
        ),
        url: "https://google.com",
        title: None,
        identifier: "google-link",
        label: Some(
            "google-link",
        ),
    },
)
