src/snapshots/md_lsp__ast__tests__find_definition_for_position-2.snap
---
source: src/ast.rs
expression: linkable_2
---
Some(
    Heading {
        children: [
            Text {
                value: "Heading 2",
                position: Some(
                    32:4-32:13 (870-879),
                ),
            },
        ],
        position: Some(
            32:1-32:13 (867-879),
        ),
        depth: 2,
    },
)
