src/snapshots/md_lsp__ast__tests__find_footnote_references_for_identifier.snap
---
source: src/ast.rs
expression: found_footnote_refs
---
[
    FootnoteReference {
        position: Some(
            107:40-107:48 (1866-1874),
        ),
        identifier: "multi",
        label: Some(
            "multi",
        ),
    },
]
